# MetroloJ-for-python

./: .gitignore  LICENSE  README.md  setup.cfg
CV_output_files/: CV.csv  MicroscopyInfo.csv
Code/: CV_report.py  ambiguous.py  common_module.py  cv_module.py  execution_test.py  homo_module.py  requirements.txt  requirements_exec.py
Homogeneity_output_files/: MicroscopyInfo.csv  ProfileStatisticsTable.csv
MetroloJ_Code/: CV_report.py  Homogeneity_report.py  functions.py  pepify.py  requirements.txt
code/: common_module.py  cv.py  cv_module.py  execution_test.py  homo.py  homo_module.py  metadata_module.py  requirements_exec.py  temp.py
inputs/: cv.comparatif.tif
metroloj/: .gitignore  README.md  common.py  cv.py  homo.py  metadata.py  metroloj_script  requirements.txt  setup.py  temp.py
metroloj/metroloj/: common.py  cv.py  homo.py
metroloj/metroloj.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
metroloj/src/metroloj/: setup.py
outputs/CV_output_files/: cv.csv
outputs/cv_outputs/: microscopy_info_table.csv
outputs/homogeneity_outputs/: intensity_plot_data.csv  max_region_table.csv  microscopy_info_table.csv  profile_stat_table.csv
test/inputs/: homogeneite10zoom1-488.tif
test/outputs/cv_outputs/: cv.csv
test/outputs/homogeneity_outputs/: norm_intensity_data.csv
