[metadata]
name = metroloj
version = 0.1.5
author = Youssef Ayachi
author_email = youssef-ayachi@outlook.com
description = A python implementation of ImageJ MetroloJ plugin
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YoussefAyachii/MetroloJ-for-python/tree/master/metroloj
project_urls = https://github.com/YoussefAyachii/MetroloJ-for-python
    Bug Tracker = https://github.com/YoussefAyachii/MetroloJ-for-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = metroloj
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src